Update the Prometheus Operator stack

--- a/apps/monitoring/exporters/deploy/kube-state-metrics/kube-state-metrics-deployment.yaml
+++ b/apps/monitoring/exporters/deploy/kube-state-metrics/kube-state-metrics-deployment.yaml
@@ -87,7 +87,7 @@ spec:
             fieldRef:
               apiVersion: v1
               fieldPath: metadata.namespace
-        image: quay.io/coreos/addon-resizer:1.0
+        image: k8s.gcr.io/addon-resizer:1.8.4
         name: addon-resizer
         resources:
           limits:
