--- a/apps/monitoring/prometheus-operator/deploy/operator/prometheusCustomResourceDefinition.yaml
+++ b/apps/monitoring/prometheus-operator/deploy/operator/prometheusCustomResourceDefinition.yaml
@@ -1480,8 +1480,7 @@ spec:
                     type: boolean
                   volumeDevices:
                     description: volumeDevices is the list of block devices to be
-                      used by the container. This is an alpha feature and may change
-                      in the future.
+                      used by the container. This is a beta feature.
                     items:
                       description: volumeDevice describes a mapping of a raw block
                         device within a container.
@@ -1538,6 +1537,14 @@ spec:
                 required:
                 - name
               type: array
+            enableAdminAPI:
+              description: 'Enable access to prometheus web admin API. Defaults to
+                the value of `false`. WARNING: Enabling the admin APIs enables mutating
+                endpoints, to delete data, shutdown Prometheus, and more. Enabling
+                this should be done with care and the user is advised to add additional
+                authentication authorization via a proxy to ensure only clients authorized
+                to perform these actions can do so. For more information see https://prometheus.io/docs/prometheus/latest/querying/api/#tsdb-admin-apis'
+              type: boolean
             evaluationInterval:
               description: Interval between consecutive evaluations.
               type: string
@@ -1572,6 +1579,9 @@ spec:
               description: ListenLocal makes the Prometheus server listen on loopback,
                 so that it does not bind against the Pod IP.
               type: boolean
+            logFormat:
+              description: Log format for Prometheus to be configured with.
+              type: string
             logLevel:
               description: Log level for Prometheus to be configured with.
               type: string
@@ -1818,8 +1828,9 @@ spec:
                     set to true. There cannot be more than one managing controller.
                   items:
                     description: OwnerReference contains enough information to let
-                      you identify an owning object. Currently, an owning object must
-                      be in the same namespace, so there is no namespace field.
+                      you identify an owning object. An owning object must be in the
+                      same namespace as the dependent, or be cluster-scoped, so there
+                      is no namespace field.
                     properties:
                       apiVersion:
                         description: API version of the referent.
@@ -2059,6 +2070,11 @@ spec:
                         description: MinBackoff is the initial retry delay. Gets doubled
                           for every retry.
                         type: string
+                      minShards:
+                        description: MinShards is the minimum number of shards, i.e.
+                          amount of concurrency.
+                        format: int32
+                        type: integer
                   remoteTimeout:
                     description: Timeout for requests to the remote write endpoint.
                     type: string
@@ -2130,6 +2146,10 @@ spec:
                 required:
                 - url
               type: array
+            replicaExternalLabelName:
+              description: Name of Prometheus external label used to denote replica
+                name. Defaults to the value of `prometheus_replica`.
+              type: string
             replicas:
               description: Number of instances to deploy for a Prometheus deployment.
               format: int32
@@ -2243,6 +2263,25 @@ spec:
                     "In", and the values array contains only "value". The requirements
                     are ANDed.
                   type: object
+            rules:
+              description: /--rules.*/ command-line arguments
+              properties:
+                alert:
+                  description: /--rules.alert.*/ command-line arguments
+                  properties:
+                    forGracePeriod:
+                      description: Minimum duration between alert and restored 'for'
+                        state. This is maintained only for alerts with configured
+                        'for' time greater than grace period.
+                      type: string
+                    forOutageTolerance:
+                      description: Max time to tolerate prometheus outage for restoring
+                        'for' state of alert.
+                      type: string
+                    resendDelay:
+                      description: Minimum amount of time to wait before resending
+                        an alert to Alertmanager.
+                      type: string
             scrapeInterval:
               description: Interval between consecutive scrapes.
               type: string
@@ -2717,9 +2756,9 @@ spec:
                             There cannot be more than one managing controller.
                           items:
                             description: OwnerReference contains enough information
-                              to let you identify an owning object. Currently, an
-                              owning object must be in the same namespace, so there
-                              is no namespace field.
+                              to let you identify an owning object. An owning object
+                              must be in the same namespace as the dependent, or be
+                              cluster-scoped, so there is no namespace field.
                             properties:
                               apiVersion:
                                 description: API version of the referent.
@@ -2864,8 +2903,7 @@ spec:
                         volumeMode:
                           description: volumeMode defines what type of volume is required
                             by the claim. Value of Filesystem is implied when not
-                            included in claim spec. This is an alpha feature and may
-                            change in the future.
+                            included in claim spec. This is a beta feature.
                           type: string
                         volumeName:
                           description: VolumeName is the binding reference to the
@@ -2940,9 +2978,14 @@ spec:
                 baseImage:
                   description: Thanos base image if other than default.
                   type: string
+                clusterAdvertiseAddress:
+                  description: Explicit (external) ip:port address to advertise for
+                    gossip in gossip cluster. Used internally for membership only.
+                  type: string
                 gcs:
-                  description: ThanosGCSSpec defines parameters for use of Google
-                    Cloud Storage (GCS) with Thanos.
+                  description: 'Deprecated: ThanosGCSSpec should be configured with
+                    an ObjectStorageConfig secret starting with Thanos v0.2.0. ThanosGCSSpec
+                    will be removed.'
                   properties:
                     bucket:
                       description: Google Cloud Storage bucket name for stored blocks.
@@ -2964,12 +3007,33 @@ spec:
                           type: boolean
                       required:
                       - key
+                grpcAdvertiseAddress:
+                  description: Explicit (external) host:port address to advertise
+                    for gRPC StoreAPI in gossip cluster. If empty, 'grpc-address'
+                    will be used.
+                  type: string
                 image:
                   description: Image if specified has precedence over baseImage, tag
                     and sha combinations. Specifying the version is still necessary
                     to ensure the Prometheus Operator knows what version of Thanos
                     is being configured.
                   type: string
+                objectStorageConfig:
+                  description: SecretKeySelector selects a key of a Secret.
+                  properties:
+                    key:
+                      description: The key of the secret to select from.  Must be
+                        a valid secret key.
+                      type: string
+                    name:
+                      description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
+                      type: string
+                    optional:
+                      description: Specify whether the Secret or it's key must be
+                        defined
+                      type: boolean
+                  required:
+                  - key
                 peers:
                   description: Peers is a DNS name for Thanos to discover peers through.
                   type: string
@@ -2988,8 +3052,9 @@ spec:
                         to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
                       type: object
                 s3:
-                  description: ThanosS3Spec defines parameters for of AWS Simple Storage
-                    Service (S3) with Thanos. (S3 compatible services apply as well)
+                  description: 'Deprecated: ThanosS3Spec should be configured with
+                    an ObjectStorageConfig secret starting with Thanos v0.2.0. ThanosS3Spec
+                    will be removed.'
                   properties:
                     accessKey:
                       description: SecretKeySelector selects a key of a Secret.
