--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -252,6 +252,7 @@ gitlab_ldap_user_base: "{{ openldap_ldap_structure_users_ou_dn }}"
 gitlab_ldap_manager_dn: "{{ openldap_ldap_readonly_user_dn }}"
 gitlab_ldap_manager_password: "{{ openldap_ldap_readonly_user_password }}"
 
+prometheus_retention: 7d
 prometheus_allowed_namespaces:
   - default
   - kube-system
