--- a/ansible/roles/nginx/defaults/main.yml
+++ b/ansible/roles/nginx/defaults/main.yml
@@ -4,6 +4,10 @@ nginx_ssl_dhparam_generate: False
 nginx_ssl_dhparam_path: /etc/nginx/dhparams.pem
 nginx_ssl_dhparam_size: 2048
 
+nginx_extra_log_formats: []
+#  - name: extra
+#    format: "$remote_addr - $remote_user [$time_local] $whatever"
+
 #nginx_sites:
 #  - name: default-site
 #    enabled_name: 000-default-site
