--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -297,3 +297,11 @@ elasticsearch_exposed_namespaces:
 
 logging_kibana_export_saved_script_path: "{{ standard_user.home }}/tools/kibana_save_objects.py"
 logging_kibana_export_saved_output_dir: "{{ standard_user.home }}/kibana_saved_objects"
+
+sickchill_context_root: /
+sickchill_smtp_host: "{{ zonemta_smtp_servername }}"
+sickchill_smtp_port: 587
+sickchill_smtp_tls: True
+sickchill_smtp_user: "{{ zonemta_feeder_authentication_username }}"
+sickchill_smtp_password: "{{ zonemta_feeder_authentication_password }}"
+sickchill_smtp_from: "noreply@{{ web_base_domain }}"
