--- a/ansible/roles/kubernetes-apps/tasks/main.yml
+++ b/ansible/roles/kubernetes-apps/tasks/main.yml
@@ -77,3 +77,6 @@
 
 - import_tasks: apps/download-sickchill.yml
   tags: kubernetes-app-download-sickchill
+
+- import_tasks: apps/download-deluge.yml
+  tags: kubernetes-app-download-deluge
