--- a/ansible/roles/kubernetes-apps/tasks/main.yml
+++ b/ansible/roles/kubernetes-apps/tasks/main.yml
@@ -80,3 +80,6 @@
 
 - import_tasks: apps/download-deluge.yml
   tags: kubernetes-app-download-deluge
+
+- import_tasks: apps/download-pyload.yml
+  tags: kubernetes-app-download-pyload
