--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -307,3 +307,7 @@ sickchill_smtp_password: "{{ zonemta_feeder_authentication_password }}"
 sickchill_smtp_from: "noreply@{{ web_base_domain }}"
 
 deluge_context_root: /
+
+pyload_context_root: /
+pyload_default_user: pyload
+pyload_default_password: clear_password
