--- a/ansible/roles/usb-serial/meta/main.yml
+++ b/ansible/roles/usb-serial/meta/main.yml
@@ -3,7 +3,7 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Install and configure the APC UPS daemon"
+  description: "Configures USB serial devices"
   min_ansible_version: 2.7
   platforms:
   - name: Debian
