--- a/ansible/roles/usb-serial/tasks/main.yml
+++ b/ansible/roles/usb-serial/tasks/main.yml
@@ -8,3 +8,7 @@
   with_items: "{{ udev_rules }}"
   when: udev_rules is defined and udev_rules | default([]) | length  > 0
   notify: Reload udev rules
+
+- include_tasks:
+    file: ser2net.yml
+  when: serial_exposed_devices | default([]) | length > 0
