Switch Home Assistant to a custom image

--- a/ansible/roles/kubernetes-apps/tasks/apps/home-homeassistant.yml
+++ b/ansible/roles/kubernetes-apps/tasks/apps/home-homeassistant.yml
@@ -1,5 +1,15 @@
 ---
 
+# TODO not idempotent
+# Push always registers a change : https://github.com/ansible/ansible/issues/25040
+# And build doesn't update an existing image without force=yes ...
+- name: Build and push Home Assistant image
+  docker_image:
+    path: "{{ kubernetes_app_root_path }}/home/homeassistant/build"
+    name: "{{ kubernetes_registry_url }}/homeassistant"
+    force: yes
+    push: yes
+
 - name: List LDAP Auth files
   set_fact:
     homeassistant_ldapauth_files: "{{ homeassistant_ldapauth_files | default([]) + [ item ] }}"
