--- a/ansible/roles/kubernetes-apps/defaults/main.yml
+++ b/ansible/roles/kubernetes-apps/defaults/main.yml
@@ -150,6 +150,16 @@ homeassistant_mqtt_password: clear_password
 homeassistant_ldap_servername: "{{ openldap_ldap_servername }}"
 homeassistant_ldap_users_dn: "{{ openldap_ldap_structure_users_ou_dn }}"
 
+#homeassistant_serial_remote_devices:
+#  test_tty1:
+#    device: /dev/test_tty1
+#    state: raw
+#    user: 0
+#    group: 0
+#    mode: 777
+#    host: 192.168.100.11
+#    port: 3333
+
 nodered_context_root: /
 nodered_ldap_servername: "{{ openldap_ldap_servername }}"
 nodered_ldap_users_dn: "{{ openldap_ldap_structure_users_ou_dn }}"
