--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -57,6 +57,12 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 			vb.customize ["modifyvm", :id, "--ioapic", "on"]
 			vb.customize ["modifyvm", :id, "--memory", master_conf['memory']]
 			vb.customize ["modifyvm", :id, "--cpus", master_conf['cpu']]
+
+			docker_disk_path = '.vagrant/master_docker.vdi'
+			unless File.exist?(docker_disk_path)
+				vb.customize ['createmedium', '--filename', docker_disk_path, '--size', master_conf['docker_disk_size']]
+			end
+			vb.customize ['storageattach', :id,  '--storagectl', settings['common']['sata_controller_name'], '--port', 1, '--device', 0, '--type', 'hdd', '--medium', docker_disk_path]
 		end
 		
 		# Used to set up Plex Media Server.
