Add cpu_execution_cap settings for Vagrant hosts

--- a/vagrant/Vagrantconfig.yaml
+++ b/vagrant/Vagrantconfig.yaml
@@ -10,6 +10,7 @@ common:
 
 master: 
   cpu: 2
+  cpu_execution_cap: 100
   memory: 4096
   ip: 192.168.100.10
   docker_disk_size: 10240
@@ -17,12 +18,14 @@ master:
 nodes:
   - name: 'node_1'
     cpu: 4
+    cpu_execution_cap: 100
     memory: 8192
     ip: 192.168.100.11
     docker_disk_size: 30720
     data_disk_size: 51200
   - name: 'node_home'
     cpu: 2
+    cpu_execution_cap: 100
     memory: 2048
     ip: 192.168.100.12
     docker_disk_size: 10240
