--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -29,6 +29,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 				vb.customize ["modifyvm", :id, "--ioapic", "on"]
 				vb.customize ["modifyvm", :id, "--memory", node_conf['memory']]
 				vb.customize ["modifyvm", :id, "--cpus", node_conf['cpu']]
+				vb.customize ["modifyvm", :id, "--cpuexecutioncap", node_conf['cpu_execution_cap']]
 				
 				docker_disk_path = '.vagrant/' + node_conf['name'] + '_docker.vdi'
 				unless File.exist?(docker_disk_path)
