--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -8,6 +8,11 @@
     - firewall
     - usb-serial
 
+- name: Configure DNS server
+  hosts: kubernetes_masters
+  roles:
+    - dnsmasq
+
 - name: Prepare Kubernetes members
   hosts: kubernetes
   roles:
