--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -13,6 +13,11 @@
   roles:
     - dnsmasq
 
+- name: Configure DNS clients
+  hosts: all
+  roles:
+    - dns-client
+
 - name: Prepare Kubernetes members
   hosts: kubernetes
   roles:
