Clean all hostnames

--- a/vagrant/Vagrantconfig.yaml
+++ b/vagrant/Vagrantconfig.yaml
@@ -16,21 +16,21 @@ master:
   docker_disk_size: 16384
 
 nodes:
-  - name: 'node_1'
+  - name: 'node-1'
     cpu: 4
     cpu_execution_cap: 75
     memory: 8192
     ip: 192.168.100.11
     docker_disk_size: 32768
     data_disk_size: 49152
-  - name: 'node_2'
+  - name: 'node-2'
     cpu: 6
     cpu_execution_cap: 75
     memory: 8192
     ip: 192.168.100.12
     docker_disk_size: 32768
     data_disk_size: 49152
-  - name: 'node_home'
+  - name: 'node-home'
     cpu: 2
     cpu_execution_cap: 75
     memory: 1024
