--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -1,16 +1,16 @@
 
 master ansible_host=192.168.100.10
-node_1 ansible_host=192.168.100.11
-node_2 ansible_host=192.168.100.12
-node_home ansible_host=192.168.100.13
+node-1 ansible_host=192.168.100.11
+node-2 ansible_host=192.168.100.12
+node-home ansible_host=192.168.100.13
 
 [kubernetes_masters]
 master
 
 [kubernetes_nodes]
-node_1
-node_2
-node_home
+node-1
+node-2
+node-home
 
 [kubernetes:children]
 kubernetes_masters
