--- a/ansible/roles/dnsmasq/tasks/main.yml
+++ b/ansible/roles/dnsmasq/tasks/main.yml
@@ -20,6 +20,7 @@
       {% for dns_local_host in dns_local_hosts %}
       {{ dns_local_host.ip }} {{ dns_local_host.name }}
       {% endfor %}
+  notify: Restart dnsmasq
 
 - name: Auto-start dnsmasq
   service:
