Fixed Kubernetes CoreCNS loop by preventing dnsmasq injecting 127.0.0.1 in the default resolvconf config

--- a/ansible/roles/dnsmasq/tasks/main.yml
+++ b/ansible/roles/dnsmasq/tasks/main.yml
@@ -13,6 +13,13 @@
     backup: yes
   notify: Restart dnsmasq
 
+- name: Configure dnsmasq default
+  template:
+    src: dnsmasq_default.j2
+    dest: /etc/default/dnsmasq
+    backup: yes
+  notify: Restart dnsmasq
+
 - name: Fill /etc/hosts with local machines
   blockinfile:
     path: /etc/hosts
