--- a/ansible/roles/dnsmasq/defaults/main.yml
+++ b/ansible/roles/dnsmasq/defaults/main.yml
@@ -7,3 +7,7 @@ dns_local_hosts: []
 #    name: host1
 #  - ip: 192.168.1.2
 #    name: host2
+
+dns_ignored_interfaces:
+  # Ignore lo to avoid having dnsmasq inject nameserver 127.0.0.1 automatically. It messes up Kubernetes' CoreDNS
+  - lo
