--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -15,3 +15,14 @@ node-home
 [kubernetes:children]
 kubernetes_masters
 kubernetes_nodes
+
+[glusterfs_servers]
+node-1
+node-2
+
+[glusterfs_clients:children]
+kubernetes
+
+[glusterfs:children]
+glusterfs_servers
+glusterfs_clients
