--- a/ansible/roles/glusterfs-server-configure/meta/main.yml
+++ b/ansible/roles/glusterfs-server-configure/meta/main.yml
@@ -3,7 +3,7 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Install GlusterFS server"
+  description: "Configure GlusterFS trusted pool and volumes"
   min_ansible_version: 2.7
   platforms:
   - name: Debian
@@ -12,3 +12,4 @@ galaxy_info:
     - buster
 #dependencies:
 #  - { role: glusterfs }
+#  - { role: glusterfs-server-install }
