--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -33,7 +33,8 @@
 - name: Prepare GlusterFS servers
   hosts: glusterfs_servers
   roles:
-    - glusterfs-server
+    - glusterfs-server-install
+    - glusterfs-server-configure
 
 - name: Prepare GlusterFS servers
   hosts: glusterfs_clients
