--- a/ansible/roles/glusterfs-server-install/defaults/main.yml
+++ b/ansible/roles/glusterfs-server-install/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 
-glusterfs_storage_vg: kubernetes_vg
+glusterfs_storage_vg: data_vg
 glusterfs_brick_root: /data/glusterfs
 glusterfs_brick_filesystem: ext4
 
