--- a/ansible/roles/storage-prepare/meta/main.yml
+++ b/ansible/roles/storage-prepare/meta/main.yml
@@ -3,13 +3,10 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Create kubernetes storage"
+  description: "Prepare application storage"
   min_ansible_version: 2.7
   platforms:
   - name: Debian
     versions:
     - stretch
     - buster
-
-#dependencies:
-#  - { role: kubernetes-common }
