--- a/ansible/roles/kubernetes-infra/defaults/main.yml
+++ b/ansible/roles/kubernetes-infra/defaults/main.yml
@@ -9,6 +9,7 @@ kubernetes_user:
 #kubernetes_nginx_ingress_mqtt_target: "mqttservice:mqttport"
 
 kubernetes_local_lvm_storage_class_name: local-lvm
+kubernetes_glusterfs_storage_class_name: glusterfs
 kubernetes_nas_nfs_storage_class_name: nas-nfs
 
 #kubernetes_nfs_storage:
