--- a/ansible/roles/kubernetes-infra/tasks/main.yml
+++ b/ansible/roles/kubernetes-infra/tasks/main.yml
@@ -6,6 +6,7 @@
     state: present
   with_items:
     - local-lvm-storage-class.yaml.j2
+    - glusterfs-storage-class.yaml.j2
     - nas-nfs-storage-class.yaml.j2
   become: yes
   become_user: "{{ kubernetes_user.name }}"
