--- a/ansible/roles/kubernetes-storage/defaults/main.yml
+++ b/ansible/roles/kubernetes-storage/defaults/main.yml
@@ -17,3 +17,19 @@ local_storage_vg: data_vg
 #      app-component: componentName
 #      storage: storageDetail
 
+kubernetes_glusterfs_endpoint: glusterfs-cluster
+
+kubernetes_glusterfs_available_namespaces:
+  - default
+  - ingress-nginx
+  - monitoring
+  - logging
+
+#glusterfs_volumes:
+#  appname-componentName-storageDetail: 
+#    mount_path: /path/on/kubernetes/node (optional)
+#    reclaim_policy: Retain
+#    labels:
+#      app: appName
+#      app-component: componentName
+#      storage: storageDetail
