--- a/ansible/roles/kubernetes-storage/tasks/main.yml
+++ b/ansible/roles/kubernetes-storage/tasks/main.yml
@@ -9,3 +9,24 @@
     label: "{{ item.key }}"
   become: yes
   become_user: "{{ kubernetes_user.name }}"
+
+- name: Create GlusterFS endpoint and service
+  k8s:
+    definition: "{{ lookup('template', item.0) }}"
+    state: present
+  with_nested:
+    - - glusterfs-endpoint.yaml.j2
+      - glusterfs-service.yaml.j2
+    - "{{ kubernetes_glusterfs_available_namespaces }}"
+  become: yes
+  become_user: "{{ kubernetes_user.name }}"
+
+- name: Create GlusterFS persistant volumes
+  k8s:
+    definition: "{{ lookup('template', 'glusterfs-persistant-volume.yaml.j2') }}"
+    state: present
+  loop: "{{ glusterfs_volumes | default({}) | dict2items }}"
+  loop_control:
+    label: "{{ item.key }}"
+  become: yes
+  become_user: "{{ kubernetes_user.name }}"
