--- a/ansible/roles/storage-prepare/tasks/main.yml
+++ b/ansible/roles/storage-prepare/tasks/main.yml
@@ -1,9 +1,13 @@
 ---
 
+- name: Read all volumes
+  set_fact: 
+    all_volumes: "{{ local_lvm_storage | default({}) | combine(glusterfs_volume_mounts | default({})) }}"
+
 - include_tasks: apps/home-homeassistant.yml
-  when: "'homeassistant-config' in local_lvm_storage | default({})"
+  when: "'homeassistant-config' in all_volumes"
   tags: kubernetes-app-home-homeassistant
 
 - include_tasks: apps/home-nodered.yml
-  when: "'nodered-data' in local_lvm_storage | default({})"
+  when: "'nodered-data' in all_volumes"
   tags: kubernetes-app-home-nodered
