--- a/ansible/roles/storage-prepare/tasks/main.yml
+++ b/ansible/roles/storage-prepare/tasks/main.yml
@@ -3,6 +3,7 @@
 - name: Read all volumes
   set_fact: 
     all_volumes: "{{ local_lvm_storage | default({}) | combine(glusterfs_volume_mounts | default({})) }}"
+  tags: always
 
 - include_tasks: apps/home-homeassistant.yml
   when: "'homeassistant-config' in all_volumes"
