--- a/ansible/roles/storage-prepare/tasks/main.yml
+++ b/ansible/roles/storage-prepare/tasks/main.yml
@@ -9,6 +9,10 @@
   when: "'prometheus-k8s' in all_volumes"
   tags: kubernetes-app-monitoring-prometheus-operator
 
+- include_tasks: apps/monitoring-grafana.yml
+  when: "'grafana-data' in all_volumes"
+  tags: kubernetes-app-monitoring-grafana
+
 - include_tasks: apps/home-homeassistant.yml
   when: "'homeassistant-config' in all_volumes"
   tags: kubernetes-app-home-homeassistant
