Add prefix before the LV names

--- a/ansible/roles/glusterfs-server-install/defaults/main.yml
+++ b/ansible/roles/glusterfs-server-install/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 
 glusterfs_storage_vg: data_vg
+glusterfs_lv_prefix: gluster_
 glusterfs_brick_root: /data/glusterfs
 glusterfs_brick_filesystem: ext4
 
