Remove resolvconf and pin the DNS configuration in resolv.conf.
It avoids issues with kube-dns when multiple nameservers are set.

--- a/ansible/roles/dns-client/tasks/main.yml
+++ b/ansible/roles/dns-client/tasks/main.yml
@@ -1,20 +1,6 @@
 ---
-
-- name: Install resolvconf
-  apt:
-    pkg:
-    - resolvconf
-    state: present
-
 - name: Set DNS configuration
   template:
-    src: resolvconf_head.j2
-    dest: /etc/resolvconf/resolv.conf.d/head
+    src: resolv.conf.j2
+    dest: /etc/resolv.conf
     backup: yes
-  notify: Restart resolvconf
-
-- name: Auto-start resolvconf
-  service:
-    name: resolvconf
-    state: started
-    enabled: yes
