--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -49,11 +49,13 @@
     - { role: nginx, tags: nginx }
     - fail2ban
     - kubernetes-master
+    - kubernetes-postinstall
 
 - name: Provision Kubernetes nodes
   hosts: kubernetes_nodes
   roles:
     - kubernetes-node
+    - kubernetes-postinstall
 
 - name: Prepare storage
   hosts: kubernetes
