--- a/ansible/roles/kubernetes-apps/tasks/main.yml
+++ b/ansible/roles/kubernetes-apps/tasks/main.yml
@@ -33,6 +33,9 @@
 - import_tasks: apps/monitoring-exporters.yml
   tags: kubernetes-app-monitoring-exporters
 
+- import_tasks: apps/monitoring-gluster-exporter.yml
+  tags: kubernetes-app-monitoring-gluster-exporter
+
 - import_tasks: apps/monitoring-prometheus-operator.yml
   tags: kubernetes-app-monitoring-prometheus-operator
 
