--- a/apps/monitoring/prometheus-operator/deploy/rules/rules.yaml
+++ b/apps/monitoring/prometheus-operator/deploy/rules/rules.yaml
@@ -134,17 +134,17 @@ spec:
   - "name": "kube-apiserver.rules"
     "rules":
     - "expr": |
-        histogram_quantile(0.99, sum(rate(apiserver_request_duration_seconds_bucket{job="kube-apiserver"}[5m])) without(instance, pod))
+        histogram_quantile(0.99, sum(rate(apiserver_request_duration_seconds_bucket{job="apiserver"}[5m])) without(instance, pod))
       "labels":
         "quantile": "0.99"
       "record": "cluster_quantile:apiserver_request_duration_seconds:histogram_quantile"
     - "expr": |
-        histogram_quantile(0.9, sum(rate(apiserver_request_duration_seconds_bucket{job="kube-apiserver"}[5m])) without(instance, pod))
+        histogram_quantile(0.9, sum(rate(apiserver_request_duration_seconds_bucket{job="apiserver"}[5m])) without(instance, pod))
       "labels":
         "quantile": "0.9"
       "record": "cluster_quantile:apiserver_request_duration_seconds:histogram_quantile"
     - "expr": |
-        histogram_quantile(0.5, sum(rate(apiserver_request_duration_seconds_bucket{job="kube-apiserver"}[5m])) without(instance, pod))
+        histogram_quantile(0.5, sum(rate(apiserver_request_duration_seconds_bucket{job="apiserver"}[5m])) without(instance, pod))
       "labels":
         "quantile": "0.5"
       "record": "cluster_quantile:apiserver_request_duration_seconds:histogram_quantile"
@@ -333,4 +333,3 @@ spec:
           )
         ) by (node)
       "record": "node:node_inodes_free:"
-  
