Use a dedicated dns_servers group

--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -4,6 +4,9 @@ node-1 ansible_host=192.168.100.11
 node-2 ansible_host=192.168.100.12
 node-home ansible_host=192.168.100.13
 
+[dns_servers]
+master
+
 [kubernetes_masters]
 master
 
